# Python-Demo

./: .gitignore  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
app/: main.py
app/demo/: console.py  fetcher.py
docs/: demo.md  index.md
