[tool.poetry]
name = "app"
version = "0.2.0"
description = ""
authors = ["Roy Moore <roy@moore.co.il>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9"
typer = "^0.15.0"
httpx = "^0.28.1"
mkdocs-material = "^9.5"
pygments = "^2.20.0"
urllib3 = "^2.6.3"
requests = "^2.33.0"
setuptools = "^78.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^26.3.1"
flake8 = "^7.1"
isort = "^6.0"
mypy = "^1.14"
mkdocs = "^1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
(
  /(
    | \.git          # root of the project
    | \.mypy_cache
    | \.idea
    | build
    | dist
  )/
)
'''
preview = true

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true
